Rename namespace and update to version 0.0.2

--- a/Assets/Entry/Runtime/Cilix.Entry.asmdef
+++ b/Assets/Entry/Runtime/Cilix.Entry.asmdef
@@ -1,17 +1,13 @@
 {
-    "name": "Entry.Editor",
-    "rootNamespace": "Entry.Editor",
-    "references": [
-        "Entry"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "name": "Cilix.Entry",
+    "rootNamespace": "Cilix",
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
