--- a/Assets/Entry/Editor/Cilix.Entry.Editor.asmdef
+++ b/Assets/Entry/Editor/Cilix.Entry.Editor.asmdef
@@ -1,13 +1,17 @@
 {
-    "name": "Entry",
-    "rootNamespace": "Entry",
-    "references": [],
-    "includePlatforms": [],
+    "name": "Cilix.Entry.Editor",
+    "rootNamespace": "Cilix.Editor",
+    "references": [
+        "Cilix.Entry"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
