--- a/Assets/Entry/package.json
+++ b/Assets/Entry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.cilix.entry",
-  "displayName": "Cilix.Entry",
+  "displayName": "Entry",
   "description": "Entry.",
   "version": "0.0.2",
   "unity": "2022.2",
