--- a/Assets/Entry/package.json
+++ b/Assets/Entry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.cilix.entry",
+  "name": "com.ciza.entry",
   "displayName": "Entry",
   "description": "Entry.",
   "version": "0.0.2",
