Update version to 0.0.3

--- a/Assets/Entry/Editor/Entry.Editor.asmdef
+++ b/Assets/Entry/Editor/Entry.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Entry.Editor",
-    "rootNamespace": "Cilix.Editor",
+    "rootNamespace": "CizaEntry.Editor",
     "references": [
         "Entry"
     ],
