--- a/Assets/Plugins/Ciza/Entry/Entry/package.json
+++ b/Assets/Plugins/Ciza/Entry/Entry/package.json
@@ -7,7 +7,7 @@
   "unityRelease": "1f1",
   "dependencies": {},
   "author": {
-    "name": "Ciza",
+    "name": "Ciza Huang",
     "email": "Ciza2596@gmail.com",
     "url": "https://www.youtube.com/channel/UCSGlWqXN4O2T3fyIJSB9MCA"
   },
@@ -17,9 +17,6 @@
   },
   "samples": [
     {
-      "displayName": "Example1 HowToUseEntry",
-      "description": "using entry examples.",
-      "path": "Samples~/Example1 HowToUseEntry"
     }
   ]
 }
